--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.7'
+version: "3.7"
 services:
-
   # Map the parent folder so that we can also access module repo
   # for local test e.g. via ../tf-modules
   terraform:
-    image: hashicorp/terraform:0.12.9
+    image: hashicorp/terraform:0.12.20
     volumes:
-    - ..:/working
-    - ~/.aws:/root/.aws
+      - ..:/working
+      - ~/.aws:/root/.aws
     working_dir: /working/tf-test
